creacion seccion info, ajuste y estilo de header and info

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-	<nav class="flex-container">
+	<nav class="flex-container white">
 		<logo>
 			<img src="assets/img/logo-pink.png">
 			<img src="assets/img/logo-white.png">
@@ -19,12 +19,33 @@
 			<button class="boton-signup">Sign up</button>
 		</menu>
 	</nav>
-	<header>
+	<header class="flex-container header">
 		<video autoplay loop>
 		  <source src="assets/img/hero-video.mp4" type="video/mp4">
 		Tu navegador no soporta la etiqueta video.
-		</video>		
+		</video>
+		<div class="header-text">
+			abc
+		</div>	
 	</header>
+	<section class="flex-container info">
+		<div class="flex-container">
+			<h2 class="text-uppercase">
+			a ride in minutes
+			</h1>
+			<p>Request a ride and you'll be on your way in minutes.<br/>Request. Ride. Repeat.</p>
+			<h2 class="text-uppercase">
+			serious about safety
+			</h2>
+			<p>From knowing the color of your driver's car to our 24/7 Trust & Safety Team, we got you.</p>
+			<h2 class="text-uppercase">
+			happy drivers.<br/>happy riders.
+			</h2>
+			<p>Ride with us and you'll see why 9 out of 10 rides end with five stars.</p>
+		</div>
+		<div class="phone">
+		</div>
+	</section>
 
 </body>
 </html>
