--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Lyft-flexbox</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
 </head>
 
 <body>
@@ -98,6 +99,56 @@
             </div>
         </div>
     </section>
+    <footer class="flex-container">
+    	<div class="flex-container pie">
+	    	<div class="inicio">
+	    		<a href="#">LOG IN</a>
+	    		<a href="#">Help</a>
+				<a href="#">Cities</a>
+				<a href="#">Airports</a>
+				<a href="#">Fare Estimate</a>
+				<a href="#">Free Ride Credits</a>
+				<a href="#">Driver Bonus</a>
+				<a href="#">Gift Cards</a>
+			</div>
+			<div class="socio">
+	    		<a href="#">PARTNER</a>
+				<a href="#">Partnerships</a>
+				<a href="#">Business</a>
+				<a href="#">Ambassadors</a>
+				<a href="#">Developers</a>
+				<a href="#">Events</a>
+			</div>
+	    	<div class="aprender">
+	    		<a href="#">LEARN</a>
+				<a href="#">Safety</a>
+				<a href="#">Blog</a>
+				<a href="#">Press</a>
+				<a href="#">Careers</a>
+				<a href="#">Driver Requirements</a>
+				<a href="#">Driver Earnings</a>
+				<a href="#">Driving Jobs</a>
+				<a href="#">Round Up & Donate</a>
+			</div>
+			<div class="etiqueta">
+				<img src="assets/img/apple-store.svg">
+				<img src="assets/img/google-play.png">
+				<img src="assets/img/microsoft.png">
+			</div>	
+		</div>
+		<div class="social">
+					<a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+					<a href="https://plus.google.com/people"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+					<a href="https://twitter.com/login?lang=es"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+					<a href="https://www.linkedin.com/uas/login"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+					<a href="https://dribbble.com/signup"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+		</div>
+		<h2 class="line">&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;&#9135;
+		</h2>
+		<div class="terms">
+			<p>&#169; 2017 Lyft, Inc. <a href="#">Terms</a> <a href="#">Privacy</a></p>
+		</div>
+    </footer>
 </body>
 
 </html>
