--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Lyft-flexbox</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="https://fontawesome.io/assets/font-awesome/css/font-awesome.css">
 </head>
 
 <body>
